# real_estate_tracker

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  LICENSE  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml
docs/: roadmap.md
docs/architecture/: 01-architecture.md  02-domain-model.md  03-database.md  04-alert-rule-engine.md  05-normalization.md  06-search-scheduler.md  07-folder-structure.md  08-sequence-diagrams.md  09-diagrams.md  10-future-proofing.md  README.md  decisions.md
docs/architecture/adr/: 001-clean-architecture.md  002-domain-driven-design-lite.md  003-sqlalchemy-as-persistence.md  004-playwright-for-scraping.md  005-telegram-notifications.md  006-import-linter.md  007-poetry-dependency-management.md  008-specification-pattern-rule-engine.md  009-canonical-property-normalizer-confinement.md  010-ine-coded-vocabularies.md  011-search-dedup-by-canonical-signature.md  012-notification-outbox.md  013-defer-cross-portal-dedup.md  014-condition-tree-and-only-mvp-ui.md  015-vocabulary-as-python-dicts.md  016-keyword-contains-python-then-db-fts.md  017-surrogate-uuid-primary-keys.md  README.md  template.md
docs/planning/: README.md  phase-3-rule-engine.md
scripts/: gh_setup.sh  run_dashboard.sh
src/real_estate/: __main__.py  composition.py  dashboard.py
src/real_estate/application/: ports.py
src/real_estate/application/dto/: __init__.py  dispatch_report.py  match_view.py  planned_query.py  run_alert_cycle_report.py
src/real_estate/application/services/: condition_parser.py  search_planner.py
src/real_estate/application/use_cases/: create_alert.py  create_channel.py  dispatch_notifications.py  list_alerts.py  list_channels.py  list_matches.py  list_search_executions.py  planner_tick.py  run_alert_cycle.py  update_alert.py
src/real_estate/domain/: errors.py
src/real_estate/domain/model/: __init__.py  alert.py  area.py  conditions.py  features.py  identifiers.py  location.py  match.py  media.py  money.py  notification.py  notification_channel.py  property.py  search_execution.py
src/real_estate/domain/ports/: __init__.py  normalizer.py  notifier.py  repositories.py  scraper.py  unit_of_work.py
src/real_estate/domain/rules/: __init__.py  factory.py  field_registry.py  operators.py  specification.py
src/real_estate/domain/services/: __init__.py  alert_engine.py  notification_formatter.py
src/real_estate/domain/vocabulary/: __init__.py  currency.py  geography.py  listing.py  property_kind.py
src/real_estate/infrastructure/: clock.py  logging.py
src/real_estate/infrastructure/config/: portal_capabilities.py  settings.py
src/real_estate/infrastructure/normalizers/: __init__.py  base.py  parsers.py  registry.py  vocabularies.py
src/real_estate/infrastructure/normalizers/idealista/: __init__.py  field_map.py  normalizer.py
src/real_estate/infrastructure/notifications/: telegram_notifier.py
src/real_estate/infrastructure/persistence/: base.py  bootstrap.py  database.py  encryption.py  unit_of_work.py
src/real_estate/infrastructure/persistence/migrations/: env.py
src/real_estate/infrastructure/persistence/migrations/versions/: 1617a7836c31_baseline_schema.py  6751a66ff70f_search_execution_normalization_issues_.py  (+1 more)
src/real_estate/infrastructure/persistence/models/: __init__.py  orm.py
src/real_estate/infrastructure/persistence/repositories/: __init__.py  alert_repository.py  match_repository.py  notification_channel_repository.py  notification_repository.py  portal_listing_repository.py  portal_lookup.py  property_repository.py  search_cache_repository.py  search_execution_repository.py
src/real_estate/infrastructure/scheduling/: scheduler.py
src/real_estate/infrastructure/scrapers/: __init__.py  base.py  circuit_breaker.py  errors.py  rate_limiter.py  registry.py
src/real_estate/infrastructure/scrapers/idealista/: __init__.py  field_labels.py  scraper.py
src/real_estate/presentation/cli/: app.py
src/real_estate/presentation/web/: app.py
tests/: conftest.py
tests/e2e/: test_cli.py  test_dispatch_notifications.py  test_planner_tick.py  test_run_alert_cycle.py
tests/fixtures/idealista/: clean_flat.json  missing_fields.json  search_results_page.html  unmapped_vocabulary.json
tests/integration/: conftest.py  test_bootstrap.py  test_notification_repositories.py  test_repositories.py  test_search_repositories.py
tests/unit/application/services/: test_search_planner.py
tests/unit/application/use_cases/: test_create_alert.py  test_create_channel.py  test_update_alert.py
tests/unit/domain/model/: test_alert.py  test_area.py  test_conditions.py  test_features_media.py  test_location.py  test_money.py  test_notification.py  test_notification_channel.py  test_property.py
tests/unit/domain/ports/: test_ports.py
tests/unit/domain/rules/: test_algebraic_laws.py  test_factory.py  test_field_registry.py  test_golden_pontevedra.py  test_operators.py  test_specification.py
tests/unit/domain/services/: test_alert_engine.py  test_notification_formatter.py
tests/unit/domain/vocabulary/: test_enums.py  test_geography.py
tests/unit/infrastructure/: test_logging.py
tests/unit/infrastructure/config/: test_portal_capabilities.py  test_settings.py
tests/unit/infrastructure/normalizers/: test_base_normalizer.py  test_parsers.py  test_registry.py  test_vocabularies.py
tests/unit/infrastructure/normalizers/idealista/: test_golden_fixtures.py
tests/unit/infrastructure/notifications/: test_telegram_notifier.py
tests/unit/infrastructure/persistence/: test_encryption.py
tests/unit/infrastructure/scheduling/: test_scheduler.py
tests/unit/infrastructure/scrapers/: test_base_scraper.py  test_circuit_breaker.py  test_rate_limiter.py  test_scraper_registry.py
tests/unit/infrastructure/scrapers/idealista/: test_field_labels.py  test_scraper.py
