[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "real_estate"
version = "0.1.0"
description = "Real Estate Alert Platform"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "black>=24.0",
    "mypy>=1.11",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "import-linter>=2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N"]

[tool.ruff.lint.isort]
known-first-party = ["real_estate"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
explicit_package_bases = true
files = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --cov=real_estate --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/real_estate"]
branch = true

[tool.importlinter]
root_package = "real_estate"

[[tool.importlinter.contracts]]
name = "Domain imports nothing but the standard library"
type = "forbidden"
source_modules = ["real_estate.domain"]
forbidden_modules = [
    "real_estate.application",
    "real_estate.infrastructure",
    "real_estate.presentation",
]

[[tool.importlinter.contracts]]
name = "Application depends on domain only"
type = "forbidden"
source_modules = ["real_estate.application"]
forbidden_modules = [
    "real_estate.infrastructure",
    "real_estate.presentation",
]

[[tool.importlinter.contracts]]
name = "Presentation never reaches into infrastructure directly"
type = "forbidden"
source_modules = ["real_estate.presentation"]
forbidden_modules = [
    "real_estate.infrastructure",
]

[[tool.importlinter.contracts]]
name = "Infrastructure never reaches into presentation"
type = "forbidden"
source_modules = ["real_estate.infrastructure"]
forbidden_modules = [
    "real_estate.presentation",
]
